[gd_scene load_steps=4 format=3 uid="uid://8lgjouoqk0dh"]

[ext_resource type="Script" path="res://src/levels/level 0/level_0.gd" id="1_wr4gx"]
[ext_resource type="PackedScene" uid="uid://hm1pwd5uc2b4" path="res://src/enemies/timed attacker/towers/target player tower/target_player_tower.tscn" id="2_hde1d"]
[ext_resource type="Script" path="res://src/enemies/timed attacker/global enemies/global bullet spawner/global_bullet_spawner.gd" id="3_2ckwp"]

[node name="Level0" type="Node2D"]
script = ExtResource("1_wr4gx")
easy_time = 10
normal_time = 15
hard_time = 20

[node name="TargetPlayerTowerLeft" parent="." instance=ExtResource("2_hde1d")]
position = Vector2(-650, 0)
speed = 500.0
frequency = 1.0
disabled = true

[node name="TargetPlayerTowerRight" parent="." instance=ExtResource("2_hde1d")]
position = Vector2(650, 0)
speed = 500.0
frequency = 1.0
disabled = true

[node name="GlobalBulletSpawner" type="Node2D" parent="."]
script = ExtResource("3_2ckwp")
speed = 300.0
frequency = 0.6

[node name="FastGlobalBulletSpawner" type="Node2D" parent="."]
script = ExtResource("3_2ckwp")
speed = 500.0
frequency = 0.5
disabled = true
